Add Docker config and refactor API URL handling
- Introduced Docker configurations for the backend.
- Updated app to bind to all network interfaces.
- Added shared network in docker-compose.
- Refactored API URL handling in frontend components.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,12 @@ services:
       - ./backend:/app
     environment:
       - FLASK_ENV=development
+      - UID=1000
+      - GID=1000
+    expose:
+      - "5000"
+    networks:
+      - app-network
 
   frontend:
     build:
@@ -23,5 +29,11 @@ services:
     environment:
       - HOST=0.0.0.0
       - CHOKIDAR_USEPOLLING=true
+      - VITE_API_URL=http://backend:5000
     depends_on:
       - backend
+    networks:
+      - app-network
+
+networks:
+  app-network:
