--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,11 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./backend:/app
+      - type: bind
+        source: ./backend
+        target: /app
+        bind:
+          propagation: rshared
     environment:
       - FLASK_ENV=development
       - UID=1000
@@ -29,7 +33,7 @@ services:
     environment:
       - HOST=0.0.0.0
       - CHOKIDAR_USEPOLLING=true
-      - VITE_API_URL=http://backend:5000
+      - VITE_API_URL=http://localhost:5000
     depends_on:
       - backend
     networks:
